5_Ingress/simple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: nginx-nodeport
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: nginx-clusterip
            port:
              number: 5000



# when the user hits foo.bar.com/bar it redirects to the svc on port 80
# when the user hits *.foo.com/foo it redirects to the svc on port 5000
